[gd_scene load_steps=2 format=3 uid="uid://dkw7vi40w1gto"]

[ext_resource type="Script" uid="uid://1lsh7g01rtcj" path="res://scenes/lights/light_spawner.gd" id="1_yh582"]

[node name="LightSpawner" type="Node2D"]
script = ExtResource("1_yh582")

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="child_order_changed" from="SpawnTimer" to="." method="_on_light_pickup"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
